fix: fixed gap

--- a/blocks/photo-flex/__list/photo-flex__list.css
+++ b/blocks/photo-flex/__list/photo-flex__list.css
@@ -9,6 +9,7 @@
 
 @media screen and (min-width: 1185px) {
   .photo-flex__list {
+    column-gap: 17px;
     display: grid;
     grid-template-columns: repeat(3, 282px);
     grid-template-rows: repeat(2, 361px);
